# AnonStake---Old-Incomplete

./: README.md
proof/: CMakeLists.txt
proof/circuitgen/: circuitgen.py  circuitlang.txt  constantgen.py  constantgen2.py  constants.txt  constants2.txt  lang.txt
proof/client/: CMakeLists.txt  Cargo.toml
proof/client/src/: lib.rs
proof/client/src/groth16/: generator.rs  mod.rs  prover.rs  verifier.rs
proof/client/src/groth16/tests/: mod.rs
proof/main/: .clang-format  CMakeLists.txt  Circuit.hpp  FR.hpp  constants.hpp  fft.hpp  link.hpp  main.cpp  notes.txt  tests.hpp
